test/fixtures/hardcoded-secrets/positive/leak.ts
export const OPENAI_KEY = "sk-proj-ABCDEFGHIJKLMNOPQRSTUVWX1234567890";
