test/fixtures/hardcoded-secrets/negative/clean.ts
export const OPENAI_KEY = process.env.OPENAI_API_KEY;
